<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="se.adanware.visaparser.model.Errors"/>
        <variable
            name="loginFragment"
            type="se.adanware.visaparser.fragment.LoginFragment" />

        <variable
            name="viewModel"
            type="se.adanware.visaparser.model.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/personnummer"
                    app:errorText='@{viewModel.loginErrors.contains(Errors.INVALID_USERNAME) ? @string/ssn_error_text : null }'
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    app:helperText="@string/ssn_helper_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ssn_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.username}"
                        android:inputType="numberPassword"
                        android:maxLength="12"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_save_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.saveCredentials}"
                    android:onCheckedChanged="@{(_, isChecked) -> loginFragment.toggleCredentials(isChecked)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_ssn"
                    app:layout_constraintBaseline_toBaselineOf="@id/switch_save_password"
                    app:layout_constraintStart_toEndOf="@id/switch_save_password"
                    app:layout_constraintTop_toBottomOf="@id/input_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:onClick="@{() -> loginFragment.validateUsername()}"
                    app:icon="@drawable/icon_bankid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_save_password"
                    app:layout_constraintWidth_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>